--- a/elab4-publication-backend/pom.xml
+++ b/elab4-publication-backend/pom.xml
@@ -63,9 +63,9 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
-            <groupId>org.apache.directory.studio</groupId>
-            <artifactId>org.apache.commons.logging</artifactId>
-            <version>1.1.3</version>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>${commons-logging.version}</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
