--- a/elab4-publication-backend-app/app-config.yml
+++ b/elab4-publication-backend-app/app-config.yml
@@ -1,3 +1,3 @@
 projectName: hattem
-dataDir: ../dockerization/charriere/data
-solrDir: ../dockerization/charriere/solr
+publicationDir: ../dockerization/charriere
+
