--- a/elab4-publication-backend-app/pom.xml
+++ b/elab4-publication-backend-app/pom.xml
@@ -35,17 +35,11 @@
             <version>${project.parent.version}</version>
         </dependency>
 
-<!--        &lt;!&ndash; jersey &ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>com.sun.jersey.contribs</groupId>-->
-<!--            <artifactId>jersey-guice</artifactId>-->
-<!--            <version>${jersey.version}</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>com.sun.jersey</groupId>-->
-<!--            <artifactId>jersey-json</artifactId>-->
-<!--            <version>${jersey.version}</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.module</groupId>
+            <artifactId>jackson-module-kotlin</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
 
         <!-- provided dependencies -->
         <dependency>
